# Petoi_MindPlusLib

./: .gitignore  config.json  petoi-robot-thirdex-V0.1.10.mpext  petoi-robot-thirdex-V0.1.11.mpext  petoi-robot-thirdex-V0.1.12.mpext  petoi-robot-thirdex-V0.1.13.mpext  petoi-robot-thirdex-V0.1.7.mpext  petoi-robot-thirdex-V0.1.8.mpext  petoi-robot-thirdex-V0.1.9.mpext
examples/: PyGame_KeyDemo.mp  Robot.mp  greetings.mp  pushups.mp
examples/BiBoard/: CameraDemo_01.mp  ReadAnalog_BiBoard.mp  testBackTouch.mp  testCamera.mp  testGesture.mp
python/: main.ts
python/_locales/: fr.json  zh-cn.json
python/_menus/: index.json
python/libraries/: PetoiRobot.py  ardSerial.py
python/libraries/PetoiRobot/: __init__.py  ardSerial.py  commonVar.py  config.py  pyproject.toml  robot.py
